Prefer ARGV over $* in Ruby

--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@ require 'saklient/cloud/api'
 
 
 # settings
-token = $*[0]
-secret = $*[1]
-zone = $*[2]
+token = ARGV[0]
+secret = ARGV[1]
+zone = ARGV[2]
 name = 'saklient demo'
 description = 'saklient demo'
 tag = 'saklient-test'
@@ -859,9 +859,9 @@ require 'saklient/cloud/api'
 
 
 # settings
-token = $*[0]
-secret = $*[1]
-zone = $*[2]
+token = ARGV[0]
+secret = ARGV[1]
+zone = ARGV[2]
 src_name = 'GitLab'
 
 # authorize
