Enabled saklient.cs github link

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ $disk-&gt;destroy();
 
 
 
-</code></pre></div><div class="code-each pull-left code-cs"><h4><div class="pull-right"><a href="./files/saklient.cs-examples.zip" class="btn btn-primary btn-xs">ZIP</a> <a href="./api/cs/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://www.nuget.org/packages/Saklient/" target="_blank" class="btn btn-primary btn-xs">NuGet.org</a> <a href="https://github.com/sakura-internet/saklient.cs" target="_blank" class="btn btn-primary btn-xs disabled">Github</a></div>C# <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="cs">using System;
+</code></pre></div><div class="code-each pull-left code-cs"><h4><div class="pull-right"><a href="./files/saklient.cs-examples.zip" class="btn btn-primary btn-xs">ZIP</a> <a href="./api/cs/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://www.nuget.org/packages/Saklient/" target="_blank" class="btn btn-primary btn-xs">NuGet.org</a> <a href="https://github.com/sakura-internet/saklient.cs" target="_blank" class="btn btn-primary btn-xs">Github</a></div>C# <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="cs">using System;
 using System.Collections.Generic;
 using System.Threading;
 using Saklient.Cloud;
@@ -848,7 +848,7 @@ $archive-&gt;destroy();
 
 
 
-</code></pre></div><div class="code-each pull-left code-cs"><h4><div class="pull-right"><a href="./files/saklient.cs-examples.zip" class="btn btn-primary btn-xs">ZIP</a> <a href="./api/cs/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://www.nuget.org/packages/Saklient/" target="_blank" class="btn btn-primary btn-xs">NuGet.org</a> <a href="https://github.com/sakura-internet/saklient.cs" target="_blank" class="btn btn-primary btn-xs disabled">Github</a></div>C# <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="cs">using System;
+</code></pre></div><div class="code-each pull-left code-cs"><h4><div class="pull-right"><a href="./files/saklient.cs-examples.zip" class="btn btn-primary btn-xs">ZIP</a> <a href="./api/cs/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://www.nuget.org/packages/Saklient/" target="_blank" class="btn btn-primary btn-xs">NuGet.org</a> <a href="https://github.com/sakura-internet/saklient.cs" target="_blank" class="btn btn-primary btn-xs">Github</a></div>C# <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="cs">using System;
 using System.Collections.Generic;
 using System.IO;
 using System.Net;
