Added python example zip

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ class CreateServerExample {
   
  }
 }
-</code></pre></div><div class="code-each pull-left code-python"><h4><div class="pull-right"><a href="./api/python/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://pypi.python.org/pypi/saklient" target="_blank" class="btn btn-primary btn-xs">PyPI</a> <a href="https://github.com/sakura-internet/saklient.python" target="_blank" class="btn btn-primary btn-xs">Github</a></div>Python <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="python">#!/usr/local/bin/python3
+</code></pre></div><div class="code-each pull-left code-python"><h4><div class="pull-right"><a href="./files/saklient.python-examples.zip" class="btn btn-primary btn-xs">ZIP</a> <a href="./api/python/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://pypi.python.org/pypi/saklient" target="_blank" class="btn btn-primary btn-xs">PyPI</a> <a href="https://github.com/sakura-internet/saklient.python" target="_blank" class="btn btn-primary btn-xs">Github</a></div>Python <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="python">#!/usr/local/bin/python3
 
 import sys, time
 
@@ -932,7 +932,7 @@ class DownloadArchiveExample {
   
  }
 }
-</code></pre></div><div class="code-each pull-left code-python"><h4><div class="pull-right"><a href="./api/python/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://pypi.python.org/pypi/saklient" target="_blank" class="btn btn-primary btn-xs">PyPI</a> <a href="https://github.com/sakura-internet/saklient.python" target="_blank" class="btn btn-primary btn-xs">Github</a></div>Python <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="python">#!/usr/local/bin/python3
+</code></pre></div><div class="code-each pull-left code-python"><h4><div class="pull-right"><a href="./files/saklient.python-examples.zip" class="btn btn-primary btn-xs">ZIP</a> <a href="./api/python/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://pypi.python.org/pypi/saklient" target="_blank" class="btn btn-primary btn-xs">PyPI</a> <a href="https://github.com/sakura-internet/saklient.python" target="_blank" class="btn btn-primary btn-xs">Github</a></div>Python <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="python">#!/usr/local/bin/python3
 
 import sys, time
 from ftplib import FTP_TLS
