Added ruby example

--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@ disk.destroy()
 
 
 
-</code></pre></div><div class="code-each pull-left code-ruby"><h4><div class="pull-right"><a href="https://github.com/sakura-internet/saklient.rb" target="_blank" class="btn btn-primary btn-xs disabled">Github</a></div>Ruby <small class="text-danger">(Alpha)</small><div class="clearfix" /></h4><pre><code class="ruby">#!/usr/bin/ruby
+</code></pre></div><div class="code-each pull-left code-ruby"><h4><div class="pull-right"><a href="./files/saklient.ruby-examples.zip" class="btn btn-primary btn-xs">ZIP</a> <a href="./api/ruby/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://rubygems.org/gems/saklient" target="_blank" class="btn btn-primary btn-xs">RubyGems</a> <a href="https://github.com/sakura-internet/saklient.ruby" target="_blank" class="btn btn-primary btn-xs">Github</a></div>Ruby <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="ruby">#!/usr/bin/ruby
 
 
 
@@ -1014,7 +1014,7 @@ archive.destroy()
 
 
 
-</code></pre></div><div class="code-each pull-left code-ruby"><h4><div class="pull-right"><a href="https://github.com/sakura-internet/saklient.rb" target="_blank" class="btn btn-primary btn-xs disabled">Github</a></div>Ruby <small class="text-danger">(Alpha)</small><div class="clearfix" /></h4><pre><code class="ruby">#!/usr/bin/ruby
+</code></pre></div><div class="code-each pull-left code-ruby"><h4><div class="pull-right"><a href="./files/saklient.ruby-examples.zip" class="btn btn-primary btn-xs">ZIP</a> <a href="./api/ruby/" target="_blank" class="btn btn-primary btn-xs">API</a> <a href="https://rubygems.org/gems/saklient" target="_blank" class="btn btn-primary btn-xs">RubyGems</a> <a href="https://github.com/sakura-internet/saklient.ruby" target="_blank" class="btn btn-primary btn-xs">Github</a></div>Ruby <small class="text-danger">(Beta)</small><div class="clearfix" /></h4><pre><code class="ruby">#!/usr/bin/ruby
 
 
 
