Updated meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>saklient sample</title>
+		<title>saklient - さくらのクラウド クライアントライブラリ</title>
+		<meta name="description" content="さくらのクラウド上のリソースを簡単にコントロールするためのライブラリです。PHP, Perl, Ruby, Python, C# 等の言語でご利用いただけます。" />
+		<meta name="robots" content="index, follow" />
 		<link rel="stylesheet" href="./res/bootstrap.min.css" />
 		<link rel="stylesheet" href="./res/github.css" />
 		<style type="text/css">
