Updated meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 		<title>saklient - さくらのクラウド クライアントライブラリ</title>
 		<meta name="description" content="さくらのクラウド上のリソースを簡単にコントロールするためのライブラリです。PHP, Perl, Ruby, Python, C# 等の言語でご利用いただけます。" />
 		<meta name="robots" content="index, follow" />
+		<meta property="og:title" content="saklient - さくらのクラウド クライアントライブラリ" />
+		<meta property="og:type" content="article" />
+		<meta property="og:description" content="さくらのクラウド上のリソースを簡単にコントロールするためのライブラリです。PHP, Perl, Ruby, Python, C# 等の言語でご利用いただけます。" />
+		<meta property="og:url" content="http://sakura-internet.github.io/saklient.doc/" />
+		<meta property="og:image" content="http://sakura-internet.github.io/saklient.doc/img/sakura_logo_200x200.png" />
+		<meta property="og:site_name" content="saklient Sakura Cloud Client Library" />
+		<meta property="og:email" content="dev-support-ml@sakura.ad.jp" />
 		<link rel="stylesheet" href="./res/bootstrap.min.css" />
 		<link rel="stylesheet" href="./res/github.css" />
 		<style type="text/css">
