Updated meta tags in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>saklient - さくらのクラウド クライアントライブラリ</title>
 		<meta name="description" content="さくらのクラウド上のリソースを簡単にコントロールするためのライブラリです。PHP, Perl, Ruby, Python, C# 等の言語でご利用いただけます。" />
 		<meta name="robots" content="index, follow" />
+		<meta name="google-site-verification" content="MXgG1S6jvxjLTKIrZWSbDaNFO6NKYDXLWhcx37UrTqg" />
 		<meta property="og:title" content="saklient - さくらのクラウド クライアントライブラリ" />
 		<meta property="og:type" content="article" />
 		<meta property="og:description" content="さくらのクラウド上のリソースを簡単にコントロールするためのライブラリです。PHP, Perl, Ruby, Python, C# 等の言語でご利用いただけます。" />
