Added schema.org attributes

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 	<head>
 		<meta charset="utf-8" />
-		<title>saklient - さくらのクラウド クライアントライブラリ</title>
-		<meta name="description" content="さくらのクラウド上のリソースを簡単にコントロールするためのライブラリです。PHP, Perl, Ruby, Python, C# 等の言語でご利用いただけます。" />
+		<meta name="Description" content="さくらのクラウド上のリソースを簡単にコントロールするためのライブラリです。PHP, Perl, Ruby, Python, C# 等の言語でご利用いただけます。" />
 		<meta name="robots" content="index, follow" />
 		<meta name="google-site-verification" content="MXgG1S6jvxjLTKIrZWSbDaNFO6NKYDXLWhcx37UrTqg" />
 		<meta property="og:title" content="saklient - さくらのクラウド クライアントライブラリ" />
@@ -13,6 +12,7 @@
 		<meta property="og:image" content="http://sakura-internet.github.io/saklient.doc/img/sakura_logo_200x200.png" />
 		<meta property="og:site_name" content="saklient Sakura Cloud Client Library" />
 		<meta property="og:email" content="dev-support-ml@sakura.ad.jp" />
+		<title>saklient - さくらのクラウド クライアントライブラリ</title>
 		<link rel="stylesheet" href="./res/bootstrap.min.css" />
 		<link rel="stylesheet" href="./res/github.css" />
 		<style type="text/css">
@@ -33,6 +33,10 @@
 
 			.jumbotron .container {
 				padding-left: 205px;
+			}
+
+			.jumbotron .container h1 small {
+				font-size: 50%;
 			}
 
 			.disable-select {
@@ -83,10 +87,10 @@
 	<body>
 
 		<div class="jumbotron">
-			<div class="container">
-				<h1>saklient</h1>
-				<p>
-					<a href="http://cloud.sakura.ad.jp/" target="_blank"><strong>さくらのクラウド</strong></a>上のリソースを簡単にコントロールするためのライブラリです。<br/>
+			<div class="container" itemscope itemtype="https://schema.org/Code">
+				<h1 itemprop="name">saklient <small>さくらのクラウド クライアントライブラリ</small></h1>
+				<p itemprop="description">
+					<a href="http://cloud.sakura.ad.jp/" target="_blank"><strong>さくらのクラウド</strong></a>上のリソースを簡単にコントロールするためのライブラリです。PHP, Perl, Ruby, Python, C# 等の言語でご利用いただけます。<br/>
 					An easy interface to control your resources on <strong>SAKURA Cloud</strong>.
 				</p>
 			</div>
