新ロゴに変更

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			.jumbotron {
 				min-width: 2340px;
 				padding: 0 0 20px 0;
-				background-image: url(./img/sakura_logo_200x200.png);
+				background-image: url(./img/sakura_logo.svg);
 				background-repeat: no-repeat;
 				background-position: left center;
 			}
