廃止の案内

--- a/index.html
+++ b/index.html
@@ -97,7 +97,12 @@
 		</div>
 
 		<div class="container">
-							<div class="row">
+				<div class="row">
+					<span style="font-size:48px;padding:0 12px;color:white;background-color:red">DEPRECATED</span>
+					&nbsp;
+					<span style="font-size:24px;color:red">本ライブラリは廃止されました。<a href="https://developer.sakura.ad.jp/">代替ライブラリ</a>をご利用ください。</span>
+				</div>
+				<div class="row">
 					<div class="col-md-10">
 						<h2>サーバの作成&emsp;<small>Create a server</small></h2>
 					</div>
